@@ -16,6 +16,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #23363: Fix possible overflow in itertools.permutations.
+
+- Issue #23364: Fix possible overflow in itertools.product.
+
 - Issue #23369: Fixed possible integer overflow in
   _json.encode_basestring_ascii.
 
